gap issue fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -11486,10 +11486,10 @@ h4 {
 }
 
 .city_carousel .slick-prev {
-  left: -7px;
+  left: -22px;
 }
 .city_carousel .slick-next {
-  right: 20px;
+  right: 0px;
 }
 
 .slick-prev,
